<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">
        <xliff:g id="id_app_name">DilemaXXI</xliff:g>
    </string>
    <string name="genre">Genre</string>
    <string name="releases">Release Date</string>
    <string name="director">Director</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="description">Overview</string>
    <string name="title">Title</string>
    <string name="movie_title">Movie Title</string>
    <string name="director_name">Director Name</string>
    <string name="detail_release">Detail Release</string>
    <string name="rating">Rating</string>
    <string name="detail_description">Detail Description</string>
    <string name="detail_genre">Detail Genre</string>
    <string name="img_movie">img_movie</string>
    <string name="tv_series">TV SERIES</string>
    <string name="movie">MOVIE</string>
    <string-array name="film_name">
        <item>Spider-Man: Into the Spider Verse</item>
        <item>Avengers: Infinity War</item>
        <item>Black Panther</item>
        <item>Aquaman</item>
        <item>Deadpool 2</item>
        <item>AntMan and the Wasp</item>
        <item>Venom</item>
        <item>Ralph Breaks the Internet </item>
        <item>Mission: Impossible - Fallout</item>
        <item>High Strung Free Dance</item>
    </string-array>
    <string-array name="series_name">
        <item>Sword Art Online: Alicization - War of Underworld</item>
        <item>Shinchou Yuusha: Kono Yuusha ga Ore Tueee Kuse ni Shinchou Sugiru</item>
        <item>Ore wo Suki nano wa Omae dake ka yo</item>
        <item>Assassins Pride</item>
        <item>Psycho-Pass 3</item>
        <item>Beastars</item>
        <item>No Guns Life</item>
        <item>Fate/Grand Order: Zettai Majuu Sensen Babylonia</item>
        <item>Hataage! Kemono Michi</item>
        <item>Bokutachi wa Benkyou ga Dekinai!</item>
    </string-array>
    <string-array name="film_desc">
        <item><xliff:g id="role_name">Miles Morales</xliff:g> is juggling his life between being a high school student and being a <xliff:g id="super_hero_name">spider-man</xliff:g>. When <xliff:g id="role_name">Wilson</xliff:g> "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the <xliff:g id="associate_hero">Avengers</xliff:g> have fought for has led up to this moment  the fate of Earth and existence itself has never been more uncertain.</item>
        <item>King <xliff:g id="Tchalla_name">TChalla</xliff:g> returns home from America to the reclusive, technologically advanced African nation of <xliff:g id="african_nation">Wakanda</xliff:g> to serve as his countrys new leader. However, <xliff:g id="role_name">TChalla</xliff:g> soon finds that he is challenged for the throne by factions within his own country as well as without. Using powers reserved to <xliff:g id="king_name">Wakandan</xliff:g> kings, <xliff:g id="role_name">TChalla</xliff:g> assumes the <xliff:g id="hero_name">Black Panther</xliff:g> mantel to join with girlfriend <xliff:g id="role_name">Nakia</xliff:g>, <xliff:g id="role_name">the queenmother</xliff:g>, his <xliff:g id="role_name">princesskid</xliff:g> sister, members of the <xliff:g id="role_name">Dora Milaje</xliff:g> and an American secret agent, to prevent <xliff:g id="african_nation">Wakanda</xliff:g> from being dragged into a world war.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half human, half Atlantean brother and true heir to the throne.</item>
        <item>Wisecracking mercenary <xliff:g id="super_hero_name">Deadpool</xliff:g> battles the evil and powerful Cable and other bad guys to save a boys life.</item>
        <item>Just when his time under house arrest is about to end, Scott Lang once again puts his freedom at risk to help <xliff:g id="role_name">Hope van Dyne</xliff:g> and <xliff:g id="role_name">Dr. Hank Pym</xliff:g> dive into the quantum realm and try to accomplish, against time and any chance of success, a very dangerous rescue mission.</item>
        <item>Investigative journalist <xliff:g id="role_name">Eddie Brock</xliff:g> attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Video game bad guy <xliff:g id="role_name">Ralph</xliff:g> and fellow misfit <xliff:g id="role_name">Vanellope von Schweetz</xliff:g> must risk it all by traveling to the World Wide Web in search of a replacement part to save <xliff:g id="role_name">Vanellopes</xliff:g> video game, <xliff:g id="film_name">Sugar Rush</xliff:g>. In way over their heads, <xliff:g id="role_name">Ralph</xliff:g> and <xliff:g id="role_name">Vanellope</xliff:g> rely on the citizens of the internet  the <xliff:g id="role_name">netizens</xliff:g>  to help navigate their way, including an entrepreneur named <xliff:g id="role_name">Yesss</xliff:g>, who is the head algorithm and the heart and soul of trend making site <xliff:g id="site_name">BuzzzTube</xliff:g>.</item>
        <item>When an IMF mission ends badly, the world is faced with dire consequences. As <xliff:g id="role_name">Ethan Hunt</xliff:g> takes it upon himself to fulfill his original briefing, the CIA begin to question his loyalty and his motives. The IMF team find themselves in a race against time, hunted by assassins while trying to prevent a global catastrophe.</item>
        <item><xliff:g id="role_name">Zander Raines</xliff:g>, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in <xliff:g id="city">New York’s</xliff:g> most anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when <xliff:g id="role_name">Charlie falls</xliff:g> hard for Barlow while <xliff:g id="role_name">Zander</xliff:g> embraces her as his muse.</item>
    </string-array>
    <string name="series_title">Series Title</string>
    <string name="image_movie">Image Movie</string>
    <string name="image_tv_series">Image Tv Series</string>
    <string name="background">Background</string>
</resources>