<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp">

    <ImageView
        android:id="@+id/img_series"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_tv_series"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/txt_rating_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_star_black_24dp"
        android:textSize="14sp"
        android:paddingEnd="5dp"
        android:paddingStart="2dp"
        android:textColor="@android:color/white"
        android:background="#66000000"
        app:layout_constraintEnd_toEndOf="@+id/img_series"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_series"
        app:layout_constraintTop_toTopOf="@+id/img_series"
        tools:text="8.5" />

    <ImageView
        android:id="@+id/background_title"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="#B3000000"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="@+id/img_series"
        app:layout_constraintEnd_toEndOf="@+id/img_series"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img_series"
        app:layout_constraintTop_toTopOf="@+id/img_series"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_title_series"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_title"
        app:layout_constraintEnd_toEndOf="@+id/background_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/background_title"
        app:layout_constraintTop_toTopOf="@+id/background_title"
        app:layout_constraintVertical_bias="0.193"
        tools:text="@string/series_title" />

    <TextView
        android:id="@+id/txt_release_series"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_title"
        app:layout_constraintEnd_toEndOf="@+id/background_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_series"
        app:layout_constraintVertical_bias="1.0"
        tools:text="2019" />


</androidx.constraintlayout.widget.ConstraintLayout>